<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="body1">one</string>
	<string name="body2">two</string>
	<string-array name="labelMenu">
		<item >Tab 1</item>
		<item >Tab 2</item>
	</string-array>
	
    <string name="app_name">e-Arogyam</string>
    <string name="main_menu">Main Menu</string>
    <string name="add_details">Add Details</string>
    <string name="verified_list">Verified List</string>
    <string name="verify">Verify</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="Menu">Menu</string>  
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_num">Phone</string>
    <string name="date_of_birth">Birth Date</string>
    <string name="choose_language">Choose Default Language</string>
    <string name="verification">Verification</string>
    <string name="english">English</string>
    <string name="Hindi">हिंदी</string>
    <string name="language">Language</string>
    <string name="enter_name">Enter Name Here</string>
    <string name="enter_num">Enter Phone Number</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="enter_age">Enter Age</string>
     <string name="SearchFilter">Search Filter</string>
        <string name="OTP">CODE</string>
        	    <string name="Pending">Pending</string> 
	    <string name="Verified">Verified</string>
	     	 <string name="Select">Select</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_update_delete">Update and Delete</string>
 <string name="Processing">Processing..</string>
     	 <string name="Delete">Delete</string>
     	  <string name="PleaseWait">Please Wait..</string>
     	   <string name="Success">Success!</string>
     	    <string name="Failed">Failed!</string>
     	     <string name="Cannotbeadded">Cannot be added!</string>
     	        <string name="FullDetail"> Please provide full detail then retry!</string>
     	        <string name="Warning">Warning!</string>
     	      <string name="AddedSuccess">Added Successfully!</string>
     	   	      <string name="NoNetwork">No Network Available!</string>
  <string name="Save">Save</string>
    <string-array name="languages">
        <item>Select</item>
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    
    <string-array name="menu_items">
        <item>Menu</item>
        <item>Add Detail</item>
        <item>Search</item>
        <item>Verify</item>
        <item>Setting</item>
    </string-array>
    

    <!-- Names -->


    <!-- Pictures -->
    <array name="profile_pics">
        <item>@drawable/ic_action_user</item>
    </array>

    <!-- Pictures -->
    <array name="search_filter">
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_call</item>
        <item>@drawable/ic_action_select_all</item>
        
    </array>

    <!-- Status -->
    <string-array name="search_hint">
        <item>Search By Name</item>
        <item>Search By Phone No</item>
        <item>Search By Date of Birth</item>

    </string-array>

    <!-- contact type -->
    <string-array name="code">
        <item>Mobile</item>
        <item>Work</item>
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Mobile</item>
        <item>Mobile</item>
        <item>Mobile</item>
    </string-array>

    <string name="title_activity_verification">VerificationActivity</string>

    <color name="add_details_background">#006986</color>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>

</resources>
