<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
  >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background"
    android:orientation="vertical" >

     <TextView
             android:id="@+id/TextView01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
         android:layout_gravity="center"
             android:layout_alignParentTop="true"
             android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/yellow_color"
             android:textSize="30sp" />

    <TextView
             android:id="@+id/add_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
         android:layout_gravity="center"
             android:layout_marginTop="28dp"
             android:text="@string/add_details"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="28sp" />
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
   android:layout_marginTop="28dp"
  android:layout_marginLeft="18dp"
  >
         <TextView
             android:id="@+id/date_of_birth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
         
        
             android:text="@string/date_of_birth"
             android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
           
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
android:gravity="right"
 android:layout_marginRight="20dp"
  >
         <EditText
             android:id="@+id/date_of_birth_text"
             android:layout_width="wrap_content"
              android:layout_height="31dp"
         
          
           android:background="@color/white_color"
             android:ems="8"
             android:hint="@string/enter_dob"
             android:inputType="textPersonName" />
         </LinearLayout>
</LinearLayout>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
android:layout_marginLeft="18dp"
   android:layout_marginTop="18dp"
  
  >
           <TextView
             android:id="@+id/phone_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
           
            
             android:text="@string/phone_num"
             android:textAppearance="?android:attr/textAppearanceMedium" />
       <LinearLayout
           
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
 android:gravity="right"
 android:layout_marginRight="20dp"
 android:paddingLeft="20dp"
  > 
         <EditText
             android:id="@+id/phone_num_text"
             android:layout_width="wrap_content"
             android:layout_height="31dp"
            
             android:ems="8"
             
               android:background="@color/white_color"
         
             android:hint="@string/enter_num"
             
             android:inputType="phone" />
         </LinearLayout>
</LinearLayout>

      <LinearLayout
           android:layout_marginTop="18dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
   android:layout_marginLeft="18dp"

  
  >
      <TextView
             android:id="@+id/enter_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"     
             android:text="@string/name"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 <LinearLayout
           
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
android:gravity="right"
 android:layout_marginRight="20dp"
  >
    <EditText
        android:id="@+id/enter_name_text"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
   
        android:ems="8"
         android:background="@color/white_color"
        android:hint="@string/enter_name"
         
   
        android:inputType="textPersonName" />
    
    </LinearLayout>
</LinearLayout>

     
       <LinearLayout
            android:layout_marginTop="18dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:layout_marginLeft="18dp"
  
  
  >
    <TextView
        android:id="@+id/enter_sex"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/sex"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 <LinearLayout
           
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
 android:gravity="center">
        <LinearLayout
           
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
  android:orientation="vertical"
 android:gravity="center"
  >
 <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/maleicon" />
            
    <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/femaleicon" />

</LinearLayout>
 <LinearLayout
           
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
  android:orientation="vertical"
 android:gravity="right"
  >

<RadioButton
    android:id="@+id/male_radio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checked="true"
    android:text="@string/male" />

<RadioButton
    android:id="@+id/female_radio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:text="@string/female" />

     </LinearLayout>
        </LinearLayout>
</LinearLayout>
       
    
          
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
android:layout_marginLeft="18dp"
android:gravity="center"
   android:layout_marginTop="18dp"
  >
         <Button
             android:id="@+id/menuadd_button_id"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
           
             android:background="@drawable/button_selector"
             android:gravity="center"
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
             android:layout_marginRight="10dp"
             android:text="@string/Menu"
             android:textColor="@color/white_color"
            />

         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:background="@drawable/button_selector"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="@string/submit"
             android:textColor="@color/white_color" />

   </LinearLayout>     
        

</LinearLayout>
</ScrollView>