<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/main_menu_background">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="21dp"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp" 
        />

    <TextView
        android:id="@+id/set_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settings"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="84dp"
        android:text="@string/phone_num"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_phone"
        android:layout_below="@+id/set_phone"
        android:layout_marginTop="44dp"
        android:text="@string/language"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/language"
        android:layout_alignLeft="@+id/spinner1"
          android:background="@drawable/edittext_selector"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/language"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/language"
        android:entries="@array/languages" 
        android:prompt="@string/choose_language"/>

     <Button
         android:id="@+id/menusetting_button_id"
         android:layout_width="wrap_content"
         android:layout_height="28dip"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/settings"
         android:layout_marginRight="14dp"
         android:background="@drawable/dark_grey_gradient"
         android:gravity="center"
         android:text="@string/Menu"
         android:textColor="@color/white_color"
         android:textSize="15sp" />

</RelativeLayout>
