<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    
    android:background="@drawable/main_menu_background"
    tools:context=".MainMenuActivity" >
    

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
  android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/yellow_color"
        android:textSize="30sp" />

<TextView
        android:id="@+id/main_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp" />

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
 android:layout_marginTop="6dp"
  
  >

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/addbutton_selector"
           android:gravity="bottom|center"
       android:paddingBottom="5dp"
             android:layout_marginRight="10dp"
        android:textSize="22sp"
            android:text="@string/add_details"
            android:textColor="@color/white_color"
            />

<Button
        android:id="@+id/search_button"
        android:layout_width="0dp"
         android:textColor="@color/white_color"
        android:layout_height="wrap_content"
       android:layout_weight="1"
        android:layout_marginLeft="10dp"
    android:gravity="bottom|center"
     android:textSize="22sp"
       android:paddingBottom="5dp"
    android:background="@drawable/searchbutton_selector"
        android:text="@string/search"
     
       />
</LinearLayout>

       <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:weightSum="2"
  
  >
    <Button
        android:id="@+id/verify_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
          android:layout_weight="1"
         android:textColor="@color/white_color"
        android:layout_marginTop="28dp"
         android:layout_marginRight="10dp"
android:background="@drawable/verifybutton_selector"
android:gravity="bottom|center"
android:text="@string/verify"
 android:textSize="22sp"
       android:paddingBottom="5dp"
     
         />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
 android:layout_weight="1"
        android:layout_marginTop="25dp"
    android:background="@drawable/settingbutton_selector"
        android:text="@string/settings"
         android:layout_marginLeft="10dp"
           android:textColor="@color/white_color"
       android:textSize="22sp"
       android:gravity="bottom|center"
       android:paddingBottom="5dp"
         />

   
   </LinearLayout> 

    

</LinearLayout>

</ScrollView>