<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_menu_background">

<TableLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TableRow 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
       <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/yellow_color"
        android:textSize="30sp"
        android:gravity="center"/>
 </TableRow>
    
 <TableRow
       android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/language"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp" />
     
 </TableRow>   
 
 <TableRow
       android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:gravity="center_horizontal">
     
     <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:textSize="20sp" />
     
 </TableRow>
 
  <TableRow
       android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginTop="20dp">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal"
    android:gravity="center" >
    <Button
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mainmenu_button_selector"
        android:text="@string/english"
        android:textColor="@color/white_color"
        android:textStyle="normal"
        android:typeface="sans"
        android:textSize="20sp"
        android:width="@dimen/main_menu_button_width"
        android:layout_gravity="center" />
    
    <ImageView
        android:id="@+id/english_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/english_logo" />
    
</LinearLayout>
</TableRow>
    <TableRow
       android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal"
    android:gravity="center" >
    <Button
        android:id="@+id/hindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:background="@drawable/mainmenu_button_selector"
        android:text="@string/Hindi"
        android:textColor="@color/white_color"
        android:textStyle="normal"
        android:typeface="sans"
        android:textSize="20sp"
        android:width="@dimen/main_menu_button_width" />

    <ImageView
        android:id="@+id/hindi_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hindi_logo" />

    
    
    
</LinearLayout>
</TableRow>
</TableLayout>
</ScrollView>