<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editdetail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/main_menu_background"  >

    <LinearLayout 
        android:layout_width="fill_parent"
         android:id="@+id/editdetailRow"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        >
<LinearLayout 
        android:layout_width="fill_parent" android:layout_height="45dip"
        
     android:background="@color/brown_color" 
        android:orientation="horizontal"
        >
        <ImageView android:id="@+id/ImageView01" android:src="@drawable/ic_action_search"
                android:layout_height="40dip" android:layout_width="40dip" android:layout_marginLeft="40dip"></ImageView>
        <TextView android:id="@+id/tvGroup" 
            android:layout_width="160dp"
                android:layout_height="35dip" 
                android:text="@string/SearchFilter"
                 android:gravity="center_vertical|left"
                 android:layout_gravity="center"
                android:paddingLeft="5dip" android:paddingRight="5dip"
                android:textColor="#ffffffff" android:textStyle="bold"
                android:textSize="20dip"></TextView>
        
</LinearLayout>
       
<LinearLayout  android:layout_width="fill_parent"
      android:gravity="center"
     
       android:layout_gravity="center"
        android:layout_height="40dip"
        android:layout_weight="1"
    android:background="@drawable/mehndi_gradient" >
         
	<ImageView android:id="@+id/ImageView01" android:src="@drawable/ic_action_user"
		android:layout_height="35dip" android:layout_width="40dip" 
		 android:layout_marginTop="3dip"
		 android:layout_marginLeft="15dip"></ImageView>
	<EditText android:id="@+id/txtSearchName_id"  
	    android:layout_width="fill_parent"
		android:layout_height="35dip" 
		 
		android:textColor="@color/dark_grey_color"
		android:gravity="center_vertical|left"
		android:paddingLeft="15dip" android:paddingRight="5dip"

	 android:layout_marginTop="3dip"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:textColorHint="@color/light_grey_color" 
		   android:layout_gravity="center"
		android:background="@drawable/white_gradient"
		
		android:textSize="17sp"></EditText>
</LinearLayout>

<LinearLayout  android:layout_width="fill_parent"
      android:gravity="center"
       android:layout_gravity="center"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:background="@drawable/mehndi_gradient">
         
	<ImageView android:id="@+id/imgSearchPhone_id" android:src="@drawable/ic_action_call"
		android:layout_height="35dip"
		 android:layout_marginTop="5dip"
		  android:layout_width="40dip" android:layout_marginLeft="15dip"></ImageView>
	<EditText android:id="@+id/txtSearchPhone_id"  
	    android:layout_width="fill_parent"
		android:layout_height="35dip" 
		  android:layout_marginTop="3dip"
		android:textColor="@color/dark_grey_color"
		android:gravity="center_vertical|left"
		android:paddingLeft="15dip" android:paddingRight="5dip"

	
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:textColorHint="@color/light_grey_color" 
		   android:layout_gravity="center"
		android:background="@drawable/white_gradient"
		
		android:textSize="17sp"></EditText>
</LinearLayout>


       <LinearLayout 
        android:layout_width="fill_parent"
      android:gravity="center"
       android:layout_gravity="center"
        android:layout_height="35dip"
        android:layout_weight="1"
            android:background="@drawable/mehndi_gradient"
       
        >
        <Button
            android:id="@+id/search_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="28dip"
           android:layout_gravity="center"
             android:gravity="center"
             android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:background="@drawable/button_selector"
            android:text="@string/search"
            android:textColor="@color/white_color"
            android:clickable="false"
            />
        
        <Button 
    	  	    android:id="@+id/menusearch_button_id"
    	  	      android:textSize="15sp"
    	  		    android:layout_width="wrap_content"
            android:layout_height="28dip"
       			  android:gravity="center"
       			   android:layout_marginTop="7dp"
    	                 android:layout_marginBottom="7dp"
    	                   android:layout_marginRight="4dp"
 				 android:background="@drawable/button_selector"
        			 android:text="@string/Menu"
        			    android:textColor="@color/white_color"
         
    	  	    />
        </LinearLayout>
        
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
           android:layout_marginBottom="25dp"
     	 android:fadeScrollbars="true"
        android:layout_marginTop="2dp"
        android:background="@color/brown_color" 
        
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent" 
        >
    </ListView>
        
</LinearLayout>